syntax="proto3";
package cosmosSdkCrud.internal.store.types.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/wrappers.proto";

option go_package="github.com/iov-one/cosmos-sdk-crud/internal/store/types";


// TestObject is a mock object used to test the store
message TestObject {
	// TestPrimaryKey is a primary key
	bytes TestPrimaryKey = 1;
	// TestSecondaryKeyA is secondary key number one
	bytes TestSecondaryKeyA = 2;
	// TestSecondaryKeyB is secondary key number two
	bytes TestSecondaryKeyB = 3;
}

// TestStarname defines a starname used by crud_test.go
message TestStarname {
    // Owner is the owner of the Starname
    string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
    // Domain references the domain to which account belongs
    string domain = 2 [(gogoproto.moretags) = "yaml:\"domain\""];
    // Name is the name of the account
    google.protobuf.StringValue name = 3 [(gogoproto.wktpointer) = true, (gogoproto.moretags) = "yaml:\"name\""];
    // Resource
    string resource = 4 [(gogoproto.moretags) = "yaml:\"resource\""];
}
